widget: Fix painting the preedit text near the right margin

https://bugzilla.gnome.org/show_bug.cgi?id=755668
(cherry picked from commit d69645413f35ba6ebff9359a89bd121733a2e475)